# colab-ai-bridge

./: .gitignore  CLAUDE.md  README.md  example.ipynb  pyproject.toml
examples/: dspy.ipynb  langchain.ipynb  pydantic-ai.ipynb
src/colab_ai_bridge/: __init__.py
src/colab_ai_bridge/core/: __init__.py  config.py  model.py  settings.py  types.py
src/colab_ai_bridge/dspy/: __init__.py  adapter.py
src/colab_ai_bridge/langchain/: __init__.py  adapter.py
src/colab_ai_bridge/pydantic_ai/: __init__.py  adapter.py
src/colab_pydantic_ai/: __init__.py  model.py
tests/: __init__.py  test_core.py  test_dspy.py  test_langchain.py  test_pydantic_ai.py
