[project]
name = "colab-ai-bridge"
version = "0.2.0"
description = "Bridge Google Colab AI models to popular frameworks"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "driller", email = "eleshis@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
keywords = ["colab", "ai", "bridge", "gemini", "gemma", "pydantic-ai", "langchain", "dspy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/drillan/colab-ai-bridge"
Repository = "https://github.com/drillan/colab-ai-bridge"
Issues = "https://github.com/drillan/colab-ai-bridge/issues"

[project.optional-dependencies]
# 個別フレームワーク
pydantic-ai = [
    "pydantic-ai>=1.17.0",
]

langchain = [
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
]

dspy = [
    "dspy-ai>=2.0.0",
]

# 全部入り
all = [
    "pydantic-ai>=1.17.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "dspy-ai>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Colab環境専用モジュールのインポートエラーを無視
[[tool.mypy.overrides]]
module = [
    "google.*",
    "nest_asyncio",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
